--- a/src/assets/tailwind/index.css
+++ b/src/assets/tailwind/index.css
@@ -7,6 +7,10 @@
 
 @tailwind utilities;
 
+.input-shadow {
+    box-shadow: 0 1px 2px #eee inset;
+}
+
 .button-shadow {
 box-shadow: inset 0px 1px 0px 0px #97c4fe;
 }
