--- a/src/assets/tailwind/index.css
+++ b/src/assets/tailwind/index.css
@@ -7,6 +7,16 @@
 
 @tailwind utilities;
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
+
 .input-shadow {
     box-shadow: 0 1px 2px #eee inset;
 }
